Fixed setting localization

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,6 +1,6 @@
 {
   "I18N.LANGUAGE": "English",
-  "pf2e-rpg-numbers": {
+  "pf2e-usage-updater": {
     "module-settings": {
       "include-canvas": {
         "enabled": {
