--- a/languages/en.json
+++ b/languages/en.json
@@ -15,7 +15,7 @@
           "choices": {
             "disabled": "Disabled",
             "roll": "Roll",
-            "Auto": "Automatic"
+            "auto": "Automatic"
           }
         }
       }
